[WebVR] Only count devices that have successfully connected.

This allows the navigator.GetVRDisplays() promise to resolve when the
underlying VR libraries are not installed or out of date.

BUG=727969

Review-Url: https://codereview.chromium.org/2915993004
Cr-Commit-Position: refs/heads/master@{#476516}

Former-commit-id: 7a7288d743d475fd4f1a903a1d3d9503ba282792