device/vr/vr_service_impl.h
@@ -60,6 +60,7 @@ class VRServiceImpl : public mojom::VRService {
   mojom::VRServiceClientPtr client_;
 
   bool listening_for_activate_;
+  unsigned connected_devices_;
 
   base::WeakPtrFactory<VRServiceImpl> weak_ptr_factory_;
 
